kubernetes/apps/paperless-ngx/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: paperless
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: v1.33
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
    name: paperless
