kubernetes/apps/paperless-ngx/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  namespace: paperless
  labels:
    app: paperless
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: paperless
      annotations:
        backup.velero.io/backup-volumes: "data,media,export"
    spec:
      containers:
        - name: paperless
          image: ghcr.io/paperless-ngx/paperless-ngx:3.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /usr/src/paperless/data
            - name: media
              mountPath: /usr/src/paperless/media
            - name: consume
              mountPath: /usr/src/paperless/consume
            - name: export
              mountPath: /usr/src/paperless/export
          startupProbe:
            httpGet:
              path: /api/
              port: 8000
            periodSeconds: 10
            failureThreshold: 30
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/
              port: 8000
            periodSeconds: 30
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/
              port: 8000
            periodSeconds: 10
            timeoutSeconds: 10
          resources:
            requests:
              memory: "704Mi"
              cpu: "100m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: paperless-data-pvc
        - name: media
          persistentVolumeClaim:
            claimName: paperless-media-pvc
        - name: consume
          persistentVolumeClaim:
            claimName: paperless-consume-pvc
        - name: export
          persistentVolumeClaim:
            claimName: paperless-export-pvc
