kubernetes/apps/paperless-ngx/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: paperless
  namespace: paperless
  labels:
    app: paperless
spec:
  type: ClusterIP
  selector:
    app: paperless
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
