kubernetes/apps/paperless-ngx/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless
  namespace: paperless
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`paperless.pxldi.de`)
      priority: 10
      services:
        - name: paperless
          port: 80
